Corrected some text. The clickable titles are more visible

--- a/front/src/styles.less
+++ b/front/src/styles.less
@@ -14,3 +14,7 @@ body {
 .card {
   margin-top: 20px;
 }
+
+.clickableTitle:hover {
+	color: #337ab7;
+}
